Fix: Resolved issue and aligned code with correct version

--- a/card.css
+++ b/card.css
@@ -24,6 +24,7 @@ body {
   top: 400px;
   left: 50%;
   transform: translateX(-80%);
+  z-index: 1;
   background-color: #ff0080;
   color: #222;
   padding: 10px 20px;
